--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -4,6 +4,7 @@
 @import './bids.scss';
 @import './cart.scss';
 @import './Home/produce_detail.scss';
+@import './modal.scss';
 *{
     margin: 0;
     padding: 0;
@@ -17,6 +18,9 @@ body{
     color: $black-text;
     
 
+}
+input[type=number]{
+    appearance: textfield;
 }
 
 #app{
@@ -240,12 +244,14 @@ ul{
         display: flex;
         text-decoration: none;
         color: $inactive-color;
+        transition: all 0.6s ease-in-out;
+
         i{
             font-size: 1.1em;
         }
         
         &:hover{
-            color: $caption-color;
+            color: $darker-primary;
             i{
                 color: $primary-color;
             }
@@ -344,12 +350,13 @@ main{
                     margin: 0 1.5em;
                     color: $inactive-color;
                     font-weight: 500;
+                    transition: all 0.6s ease-in-out;
                     &.router-link-active{
                         color:$primary-color;
                     }
     
                     &:hover{
-                        color: $primary-color;
+                        color: $darker-primary;
                     }
                     }
                     .active{
@@ -486,6 +493,7 @@ main{
 
 
                 &::after{
+                    transition: all 0.6s ease-in-out;
                     
                         display: block;
         
@@ -964,35 +972,3 @@ main{
 }
 
 
-.modal-body{
-    width:100%;
-    display: flex;
-    align-items: center;
-
-    .modal-image-body{
-        .main-modal-image{
-            margin: 2em 0;
-            height: 25em;
-            width: 40em;
-            border-radius: 10px;
-        }
-        #modal-image-options{
-            display: flex;
-            justify-content: space-around;
-            .caption-modal-image{
-                height: 6em;
-                width: 12em;
-                
-
-                border-radius: 10px;
-
-                &.active{
-                    border: 3px solid $primary-color;
-                }
-            }
-
-        }
-        
-
-    }
-}
