wallet page complete

--- a/src/assets/styles/Home/filter.css
+++ b/src/assets/styles/Home/filter.css
@@ -11,7 +11,7 @@
 .filter section .filter-area {
   text-align: center;
   width: 6em;
-  color: #5a5a5a;
+  color: #4E5C4B;
   padding: 0.4em;
   transition: all 0.3s ease-in-out;
 }
