--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,5 +1,6 @@
 $background-color: #F2F2F2;
 $inactive-color: #5a5a5a;
+
 $primary-color: #59914C;
 $accent-color: #cd8e48;
 $caption-color: #57804f;
@@ -7,3 +8,10 @@ $darker-primary: #44743b;
 $black-text: rgb(31, 31, 31);
 $red-color: rgb(194, 79, 79);
 $card-hover-color: rgb(247, 247, 247);
+
+
+$primary-theme: #59914C;
+$primary-light: #66A858;
+$inactive: #4E5C4B;
+$primary-bright: #85DB72;
+$light: #BFE0B8;
