--- a/src/assets/styles/Home/filter.scss
+++ b/src/assets/styles/Home/filter.scss
@@ -20,7 +20,7 @@
 
         text-align: center;
         width: 6em;
-        color: $inactive-color;
+        color: $inactive;
         padding: 0.4em;
         transition: all 0.3s ease-in-out ;
 
